# udp_client

./: .anjuta_sym_db.db  Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data_files/: NoiselessPatientSpider.txt
src/: Makefile  Makefile.am  Makefile.in  main.c  udp_client
src/.deps/: main.Po
